force-app/main/default/objects/POS_Notification_History__c/POS_Notification_History__c.object-meta.xml
<CustomObject>
    <description>NPN: POS Submission: Stores the POS Submission reminder email details.</description>
    <label>POS Notification History</label>
    <nameField>
        <displayFormat>POSN-{00000}</displayFormat>
        <label>POS Notification History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>POS Notifications History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>