force-app/main/default/objects/POS_Notification_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>POS Notifications History</relationshipLabel>
    <relationshipName>POS_Notifications_History</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>