force-app/main/default/objects/POS_Notification_History__c/fields/First_Reminder__c.field-meta.xml
<CustomField>
    <fullName>First_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>First Reminder</label>
    <type>Checkbox</type>
</CustomField>