force-app/main/default/objects/POS_Notification_History__c/fields/Info__c.field-meta.xml
<CustomField>
    <fullName>Info__c</fullName>
    <label>Info</label>
    <length>255</length>
    <type>Text</type>
</CustomField>