force-app/main/default/objects/POS_Notification_History__c/fields/Last_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Last_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Last Reminder</label>
    <type>Checkbox</type>
</CustomField>