force-app/main/default/objects/POS_Notification_History__c/fields/YearMonth__c.field-meta.xml
<CustomField>
    <fullName>YearMonth__c</fullName>
    <label>YearMonth</label>
    <length>255</length>
    <type>Text</type>
</CustomField>